manifest/objects/AcctGrpConParsing_Item__c.object
<CustomObject>
    <description>Staging queue to hold all data transmitted to create Accounts, groups, and contacts.</description>
    <fields>
        <fullName>Batch_Key__c</fullName>
        <description>Used to identify grouped submissions</description>
        <label>Batch Key</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Time__c</fullName>
        <description>When this batch was uploaded.</description>
        <label>Batch Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Item_Data__c</fullName>
        <description>Data used to create supporting records</description>
        <label>Item Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item_Defaults__c</fullName>
        <label>Item Defaults</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item_Key__c</fullName>
        <label>Item Key</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parsing_Results__c</fullName>
        <label>Parsing Results</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>UMR, GENERIC, etc.</description>
        <label>Source</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AcctGrpConParsing Item</label>
    <nameField>
        <displayFormat>AGCPI-{00000000}</displayFormat>
        <label>AcctGrpConParsing Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AcctGrpConParsing Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>